improved readability of graphs, fixed axis issues, fixed content sizing issue for .content and .sidebar

--- a/source/stylesheets/_d3.scss
+++ b/source/stylesheets/_d3.scss
@@ -4,7 +4,7 @@
 
         .line {
             fill: none;
-            stroke-width: 2 px;
+            stroke-width: 5px;
         }
 
         .line_trail {
